0029970: Coding Rules - StdSelect_BRepOwner::Set() method is declared but undefined

Undefined method has been removed.