src/StdSelect/StdSelect_BRepOwner.hxx
@@ -70,10 +70,7 @@ public:
   //! returns False if no shape was set
   Standard_Boolean HasShape() const { return !myShape.IsNull(); }
 
-  //! <FromDecomposition> indicates whether <aShape>
-  //! comes from decomposition of a bigger shape.
-  Standard_EXPORT void Set (const TopoDS_Shape& aShape, const Standard_Boolean FromDecomposition = Standard_False);
-
+  //! Returns the shape.
   const TopoDS_Shape& Shape() const { return myShape; }
 
   //! Returns true if this framework has a highlight mode defined for it.
